manifest/intermediate-pod-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - name: nginx
    image: nginx
  - name: logger
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
